# learning-jax

./: .gitignore  LICENSE  README.md  pyproject.toml
learningjax/: causal_lm.py  linear_regression.py  loss.py  losses.py  optimize.py  transformer.py  utils.py
learningjax/_cli/: train_clm.py
scripts/: linear_regression.py  mnist_mlp.py  train_clm.py  translate.py
tests/: test_causal_lm.py  test_linear_regression.py  test_loss.py  test_losses.py  test_optimize.py  test_transformer.py  test_utils.py
